[gd_scene load_steps=6 format=3 uid="uid://c3h3jildcn5gm"]

[ext_resource type="Script" path="res://Scripts/Battle/battle_panel.gd" id="1_njjyf"]
[ext_resource type="Script" path="res://Interacts/BattlePanels/SkillManager.gd" id="2_1psmx"]
[ext_resource type="PackedScene" uid="uid://dd7ne0vnk7lh7" path="res://Objects/UI/RoundButton/round_button.tscn" id="3_4k28p"]
[ext_resource type="Theme" uid="uid://ox7rhurq21n8" path="res://Objects/UI/button_theme.tres" id="4_bijw2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7x350"]

[node name="BattlePanel" type="Control"]
layout_mode = 3
anchor_top = 0.55
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
pivot_offset = Vector2(180, 193)
script = ExtResource("1_njjyf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(180, 193)
color = Color(0.607843, 0.607843, 0.607843, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(180, 193)
alignment = 1

[node name="Panel" type="Panel" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_7x350")
script = ExtResource("2_1psmx")

[node name="SkillButton" parent="ColorRect/VBoxContainer/Panel" groups=["battle_buttons"] instance=ExtResource("3_4k28p")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -9.10001
offset_right = 79.0
offset_bottom = 80.9
grow_vertical = 2
button_number = 1

[node name="SkillButton2" parent="ColorRect/VBoxContainer/Panel" groups=["battle_buttons"] instance=ExtResource("3_4k28p")]
layout_mode = 1
offset_left = 72.0
offset_top = 2.39999
offset_right = 142.0
offset_bottom = 92.4
button_number = 2

[node name="SkillButton3" parent="ColorRect/VBoxContainer/Panel" groups=["battle_buttons"] instance=ExtResource("3_4k28p")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -130.0
offset_top = 4.39999
offset_right = -60.0
offset_bottom = 94.4
grow_horizontal = 0
button_number = 3

[node name="SkillButton4" parent="ColorRect/VBoxContainer/Panel" groups=["battle_buttons"] instance=ExtResource("3_4k28p")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -81.0
offset_top = 86.4
offset_right = -11.0
offset_bottom = 176.4
grow_horizontal = 0
button_number = 4

[node name="CenterButton" parent="ColorRect/VBoxContainer/Panel" groups=["battle_buttons"] instance=ExtResource("3_4k28p")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -1.10001
offset_right = 50.0
offset_bottom = 98.9
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="BagButtonContainer" type="MarginContainer" parent="ColorRect/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Button1" type="Button" parent="ColorRect/VBoxContainer/GridContainer/BagButtonContainer" groups=["battle_buttons"]]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("4_bijw2")
keep_pressed_outside = true
text = "가방"

[node name="TalkButtonContainer" type="MarginContainer" parent="ColorRect/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Button1" type="Button" parent="ColorRect/VBoxContainer/GridContainer/TalkButtonContainer" groups=["battle_buttons"]]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("4_bijw2")
keep_pressed_outside = true
text = "대화"

[node name="QuestButtonContainer" type="MarginContainer" parent="ColorRect/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Button1" type="Button" parent="ColorRect/VBoxContainer/GridContainer/QuestButtonContainer" groups=["battle_buttons"]]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("4_bijw2")
keep_pressed_outside = true
text = "퀘스트"

[node name="RunButtonContatiner" type="MarginContainer" parent="ColorRect/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Button1" type="Button" parent="ColorRect/VBoxContainer/GridContainer/RunButtonContatiner" groups=["battle_buttons"]]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("4_bijw2")
keep_pressed_outside = true
text = "도망
"

[node name="PanelContainer" type="PanelContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="ActionPoint" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -115.0
offset_top = -21.6
offset_right = -1.0
offset_bottom = 1.39999
grow_horizontal = 0

[connection signal="button_up" from="ColorRect/VBoxContainer/GridContainer/BagButtonContainer/Button1" to="." method="_on_button_bag_button_up"]
[connection signal="button_up" from="ColorRect/VBoxContainer/GridContainer/TalkButtonContainer/Button1" to="." method="_on_button_talk_button_up"]
[connection signal="button_up" from="ColorRect/VBoxContainer/GridContainer/QuestButtonContainer/Button1" to="." method="_on_button_quest_button_up"]
[connection signal="button_up" from="ColorRect/VBoxContainer/GridContainer/RunButtonContatiner/Button1" to="." method="_on_button_run_button_up"]
